# llm-zoomcamp2025

./: README.md  docker-compose.yml  main.py  pyproject.toml
module1/: docker-compose.yml  homework1.ipynb  index_documents.py  rag-intro1.ipynb  semantic_search.ipynb
module2/: docker-compose.yml  qdrant_embeddings.ipynb  qdrant_rag.ipynb
module2/qdrant_storage/: raft_state.json
module2/qdrant_storage/collections/llm-zoomcamp-rag/0/: newest_clocks.json  replica_state.json
module2/qdrant_storage/collections/llm-zoomcamp-rag/0/segments/1a5f3179-c433-4c6a-88ae-dee9012cc3bb/: mutable_id_tracker.mappings
module2/qdrant_storage/collections/llm-zoomcamp-rag/0/segments/1a5f3179-c433-4c6a-88ae-dee9012cc3bb/payload_index/: IDENTITY  LOG  MANIFEST-000005
module2/qdrant_storage/collections/llm-zoomcamp-rag/0/segments/47bf2d70-c7c3-4603-a93c-e4c47a693db0/payload_index/: IDENTITY  LOG  MANIFEST-000005
module2/qdrant_storage/collections/llm-zoomcamp-rag/0/segments/7cede64a-1522-458c-a803-21a191315025/payload_index/: IDENTITY  LOG  MANIFEST-000005
module2/qdrant_storage/collections/llm-zoomcamp-rag/0/segments/967fec9c-1cf2-45d8-a9a6-d0454651c264/payload_index/: IDENTITY  LOG  MANIFEST-000005
module2/qdrant_storage/collections/llm-zoomcamp-rag/0/segments/c89e3bbc-50ab-418d-b495-94ef0cf05adb/payload_index/: IDENTITY  LOG  MANIFEST-000005
module2/qdrant_storage/collections/llm-zoomcamp-rag/0/segments/db15a544-36a0-4b80-8748-9e7a4a07359d/payload_index/: IDENTITY  LOG  MANIFEST-000005
(+6 files in other folders)
