[project]
name = "llm-zoomcamp2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "elasticsearch>=8.0.0,<9.0.0",
    "jupyterlab>=4.4.3",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.21",
    "openai>=1.84.0",
    "sentence-transformers>=4.1.0",
]
